--- a/Tercera práctica/project/style/main.css
+++ b/Tercera práctica/project/style/main.css
@@ -76,3 +76,19 @@ select {
     bottom: 5px;
     margin-left: 9em;
 }
+
+.message-box {
+    position: fixed;
+    left: 20px;
+    top: 20px;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 10px;
+    opacity: 0.7;
+}
+
+.message {
+    font-family: Nintendoid1;
+    color: #eee;
+    padding: 0 20px 0 20px;
+}
